Added: DLM Rest Routes for dlm_download, dlm_download_category & dlm_download_tag
Fixed: Changed the escaping method to allow some html tags to be inserted in the title ( https://github.com/WPChill/download-monitor/issues/783 )
Changed: The "View" category button in Downloads > Categories should not exist ( https://github.com/WPChill/download-monitor/issues/775 )

= 4.4.13 - 16.11.2021 =
Fixed: Fatal error because an extra semicolon

= 4.4.12 - 16.11.2021 =
Fixed: Dependencies in widgets screen cc @HardeepAsrani
Removed: Custom webpack build and replaced with @wordpress/scripts cc @HardeepAsrani
Fixed: Optimized block with React Hooks for readibility purposes cc @HardeepAsrani
Fixed: Product not saving in downloads select ( https://github.com/WPChill/download-monitor/issues/770 )
Fixed: Typo in file URLs
Fixed: Widget options update - https://github.com/WPChill/download-monitor/issues/768
Fixed: Downloads not working with shop enabled - https://github.com/WPChill/download-monitor/issues/769

= 4.4.11 - 03.11.2021 =
Fixed: Reports date changing ( https://github.com/WPChill/download-monitor/issues/755 )
Fixed: Log page - Status Column width ( https://github.com/WPChill/download-monitor/issues/756 )
Fixed: Password protection form, password field not being displayed ( https://github.com/WPChill/download-monitor/issues/757 )
Fixed: Escaping problem in the No-Access page ( https://github.com/WPChill/download-monitor/issues/758 )

= 4.4.10 - 02.11.2021 =
Fixed: Escaping in admin "All Downloads" page. ( https://github.com/WPChill/download-monitor/issues/753 )
Added: Review request in dashboard.

= 4.4.9 - 01.11.2021 =
Fixed: Escaping in admin column, displaying HTLM instead of correct form
Added: Clear transients button.

= 4.4.8 - 29.10.2021 =
Fixed: Insert Download/Quick Download Button

= 4.4.7 - 29.10.2021 =
Fixed: Sanitization & Escaping

= 4.4.6 - 20.10.2021 =
Fixed: Checking for modifications to the upload folder

= 4.4.5 - 20.10.2021 =