@@ -1571,10 +1571,12 @@ table.wp-list-table .column-thumb img {
 }
 
 .wrap.dlm-admin-settings .dlm-upsell-badge {
-  background: green;
-  color: #fff;
-  padding: 5px 10px;
-  font-size: 11px;
+  font-size: 10px;
+  background: #f4daa4;
+  padding: 2px 5px;
+  display: inline-block;
+  margin-left: 10px;
+  border-radius: 10px;
 }
 #total_downloads_browser_table a.nav-tab {
   text-transform: capitalize;
@@ -1651,4 +1653,19 @@ table.wp-list-table .column-thumb img {
 }
 .upsells-columns .wpchill-upsell {
   margin-top: 0;
+}
+#download-monitor-options .options_upsell_link {
+  color: unset;
+  text-decoration: none;
+}
+#download-monitor-options p.not-active {
+  opacity: 0.7;
+}
+#download-monitor-options .dlm-upsell-badge {
+  font-size: 10px;
+  background: #f4daa4;
+  padding: 2px 5px;
+  display: inline-block;
+  margin-left: 5px;
+  border-radius: 10px;
 }
